# AOWIS-SERVER-API

./: .env.example  Cargo.toml  Justfile  README.md
pages/: index.html
src/: app.rs  config.rs  error.rs  main.rs
src/dto/: hello.rs
src/handlers/: hello.rs
src/routes/: hello_world.rs
